# foam4Py

./: .gitignore  .gitmodules  CMakeCache.txt  README.md  pyproject.toml  setup.py
foam4Py/: __init__.py
foam4Py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
include/pyBindFOAM/patchAverage/patchAverage/: patchAverage.H
openfoam-python/: DictionaryEditor.py  __init__.py  findFoamDicts.py  importFoamDict.py  interface.py  interfaceUtils.py  openfoam_dict_finder.py  py4foam_interface.py  py4foam_interface_utils.py  runFoamExe.py  run_foam_executables.py
openfoam_interface/: openfoam_dict_reader.py  openfoam_interface.py  openfoam_interface_utils.py  output_interface.py  run_foam_executables.py
openfoam_python/: __init__.py  dictionary_editor.py  openfoam_dict_reader.py  output_interface.py  run_foam_executables.py
pyBindFOAM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyBindFOAMPackage/: __init__.py  findFoamDicts.py  importFoamDict.py  interface.py  interfaceUtils.py  meshUtils.py
pyBindFOAMPackage/include/pyBindFOAM/patchAverage/: patchAverage.H
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  FOAMConfig.cmake  Makefile  install_manifest.txt  pyBlockMesh.C
src/foam4Py_cpp/: CMakeLists.txt  foam4Py_cpp_to_py_bindings.C
src/foam4Py_cpp/include/: argumentParser.H  findBlockMeshDict.H  formatJSONforFoam.H  fvCFDWrapper.H  importObject.H  mergePatchPairs.H  pyBlockMesh.H  pyPatchAverage.H
src/foam4Py_cpp/meshing/pyBlockMesh/: CMakeLists.txt  pyBlockMesh.C  pyBlockMesh.H
src/foam4Py_cpp/postprocessing/: CMakeLists.txt
src/foam4Py_cpp/postprocessing/pyPatchAverage/: CMakeLists.txt  pyPatchAverage.C  pyPatchAverage.H
src/foam4Py_cpp/solvers/: CMakeLists.txt
src/foam4Py_cpp/utils/: CMakeLists.txt  argumentParser.H  formatJSONforFOAM.C  formatJSONforFoam.H  fvCFDWrapper.C  importObject.C  importObject.H
src/interface/: dictionaryTools.py  dictionaryTools.py.s  interface.py
src/openfoam-python-api-cpp/: CMakeLists.txt  openfoam-python-api-bindings.C
src/openfoam-python-api-cpp/meshing/: CMakeLists.txt
src/openfoam-python-api-cpp/meshing/pyBlockMesh/: pyBlockMesh.C  pyBlockMesh.H
src/openfoam-python-api-cpp/postprocessing/: CMakeLists.txt
src/openfoam-python-api-cpp/postprocessing/pyPatchAverage/: CMakeLists.txt
src/openfoam-python-api-cpp/utils/: CMakeLists.txt  argumentParser.C  argumentParser.H  formatJSONforFOAM.C
src/openfoam_python_api_cpp/: CMakeLists.txt
src/openfoam_python_api_cpp/meshing/pyBlockMesh/: CMakeLists.txt
src/openfoam_python_api_cpp/postprocessing/pyPatchAverage/: patchAverage.C  patchAverage.H
src/openfoam_python_api_cpp/solvers/: CMakeLists.txt
src/openfoam_python_api_cpp/utils/: fvCFDWrapper.C  fvCFDWrapper.H
src/pyBindFOAM/: CMakeLists.txt  Makefile  pyBindFOAM.C  pyBindFOAMMods.C  whatever
src/pyBindFOAM/blockMesh/: blockMesh.C  blockMesh.H  findBlockMeshDict.H
src/pyBindFOAM/controls/: createTime.H
src/pyBindFOAM/fvCFDWrapper/: CMakeLists.txt  fvCFDWrapper.C  fvCFDWrapper.H
src/pyBindFOAM/importTools/: CMakeLists.txt  convertJSONtoFoamDict.C  convertJSONtoFoamDict.H
src/pyBindFOAM/patchAverage/: CMakeLists.txt  Makefile  patchAverage.C  patchAverage.H  pyBindPatchAverage.C
src/pyBindFOAM/utils/: formatJSONforFoam.H  importObject.C  importObject.H  types.H
src/trash/: pyBindPatchAverage.C
tests/: patchAverage.py
tests/cavity/: temp.py
tests/cavity/0/: U  p
tests/cavity/system/: controlDict
