[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foamPyInterface_ojm40"
version = "0.0.1"
authors = [
  { name="Oliver Marx", email="oliver.j.marx@gmail.com" },
]
description = "A Python interface for the foam-extend library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
